# DPS-pos2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
DPS-src/: Main.cpp
DPS-src/parallel/: DetParallelSolver.cpp  DetParallelSolver.h  Options.cpp  Options.h  Sharer.cpp  Sharer.h  Version.cpp  Version.h
DPS-src/period/: ClauseBuffer.cpp  ClauseBuffer.h  PrdClauses.cpp  PrdClauses.h  PrdClausesQueue.cpp  PrdClausesQueue.h  PrdClausesQueueMgr.cpp  PrdClausesQueueMgr.h
DPS-src/sat/: Clause.cpp  Clause.h  Instance.cpp  Instance.h  Model.cpp  Model.h
DPS-src/solvers/: AbstDetSeqSolver.cpp  AbstDetSeqSolver.h  DPS_C_API.cpp  DPS_C_API.h  GlucoseWrapper.cpp  GlucoseWrapper.h  KissatWrapper.cpp  KissatWrapper.h  MapleCOMSPSWrapper.cpp  MapleCOMSPSWrapper.h  MiniSatWrapper.cpp  MiniSatWrapper.h  SolverFactory.cpp  SolverFactory.h  ThreadLocalVars.cpp  ThreadLocalVars.h
DPS-src/utils/: Chronometer.cpp  Chronometer.h  System.cpp  System.h  p2.cc
docs/: all-results.csv  fig-DPS-Glucose-non-det-best-vs-DPS-Glucose-non-det-worst.html  fig-DPS-Kissat-best-vs-DPS-Kissat-worst.html  fig-DPS-Kissat-elim-vs-DPS-Kissat-no-elim.html  fig-DPS-Kissat-non-det-best-vs-DPS-Kissat-non-det-worst.html  fig-DPS-Kissat-vs-DPS-Kissat-elim.html  fig-DPS-Kissat-vs-DPS-Kissat-no-elim.html  fig-DPS-Kissat-vs-DPS-Kissat-no-exchange.html  fig-DPS-Kissat-vs-DPS-Kissat-non-det.html  fig-DPS-Kissat-vs-NPS-Kissat.html  fig-DPS-MCOMSPS-non-det-best-vs-DPS-MCOMSPS-non-det-worst.html  fig-DPS-MiniSAT-non-det-best-vs-DPS-MiniSAT-non-det-worst.html  fig-Glucose-syrup-best-vs-Glucose-syrup-worst.html  fig-Glucose-syrup-vs-DPS-Glucose.html  fig-ManyGlucose-blk-vs-DPS-Glucose.html  fig-ManyGlucose-lit-vs-DPS-Glucose.html  fig-ManySAT-vs-DPS-MiniSAT.html  fig-NPS-Glucose-best-vs-NPS-Glucose-worst.html  fig-NPS-Kissat-best-vs-NPS-Kissat-worst.html  fig-NPS-Kissat-vs-NPS-Kissat-no-exchange.html  fig-NPS-MCOMSPS-best-vs-NPS-MCOMSPS-worst.html  fig-NPS-MiniSAT-best-vs-NPS-MiniSAT-worst.html  fig-Painless-MCOMSPS-best-vs-Painless-MCOMSPS-worst.html  fig-Painless-MCOMSPS-vs-DPS-Kissat.html  fig-Painless-MCOMSPS-vs-DPS-MCOMSPS.html  fig-cdf-sat+unsat.html  fig-cdf-sat.html  fig-cdf-unsat.html  fig-exchanging-time-ratio.html  fig-period-speed.html  fig-propagation-speed.html  fig-waiting-time-ratio.html  index.html  style.css
glucose/glucose-3.0/: CMakeLists.txt
glucose/glucose-3.0/core/: BoundedQueue.h  Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h
glucose/glucose-3.0/mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h
glucose/glucose-3.0/simp/: Main.cc  SimpSolver.cc  SimpSolver.h
glucose/glucose-3.0/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
kissat/: CMakeLists.txt
kissat/kissat-sc2021/: configure
kissat/kissat-sc2021/src/: analyze.c  assign.c  backbone.c  check.c  check.h  clause.c  decide.c  definition.c  dps_api.c  dps_api.h  eliminate.c  forward.c  heap.h  internal.c  internal.h  learn.c  minimize.c  propdense.c  prophyper.c  proplit.h  report.c  resolve.c  search.c  shrink.c  substitute.c  transitive.c
mcomsps/MapleCOMSPS_LRB_VSIDS_2_no_drup/: CMakeLists.txt
mcomsps/MapleCOMSPS_LRB_VSIDS_2_no_drup/MapleCOMSPS_LRB_VSIDS_2/core/: Dimacs.h  Main.cc  Solver.cc  Solver.h  SolverTypes.h
mcomsps/MapleCOMSPS_LRB_VSIDS_2_no_drup/MapleCOMSPS_LRB_VSIDS_2/mtl/: Alg.h  Alloc.h  Heap.h  IntTypes.h  Map.h  Queue.h  Sort.h  Vec.h  XAlloc.h  template.mk
mcomsps/MapleCOMSPS_LRB_VSIDS_2_no_drup/MapleCOMSPS_LRB_VSIDS_2/simp/: Main.cc  SimpSolver.cc  SimpSolver.h
mcomsps/MapleCOMSPS_LRB_VSIDS_2_no_drup/MapleCOMSPS_LRB_VSIDS_2/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
minisat/minisat-2.2.0/: CMakeLists.txt  minisat-2.2.0.patch
minisat/minisat-2.2.0/core/: Dimacs.h  Main.cc  Makefile  Solver.cc  Solver.h  SolverTypes.h
minisat/minisat-2.2.0/mtl/: Alg.h  Alloc.h  Heap.h  Map.h  Queue.h  Sort.h  Vec.h  XAlloc.h  config.mk  template.mk
minisat/minisat-2.2.0/simp/: Main.cc  Makefile  SimpSolver.cc  SimpSolver.h
minisat/minisat-2.2.0/utils/: Options.cc  Options.h  System.cc  System.h
supplementals/: fig-cdf-all.html  fig-cdf-sat.html
